@@ -1,5 +1,8 @@
 2000-08-26  Dave Peticolas  <dave@krondo.com>
 
+	* src/engine/Group.c (xaccGetAccountRoot): remove unnecessary
+	casts.
+
 	* src/gnome/window-reconcile.c
 	(gnc_ui_reconcile_window_delete_cb): rewrite to use g_lists.
 
